--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -5,9 +5,9 @@
    "id": "c6a29764-f39c-431c-8e77-fbc6bfe20f01",
    "metadata": {},
    "source": [
-    "# template-project demo\n",
+    "# Demo\n",
     "\n",
-    "The purpose of this notebook is to demonstrate the functionality of `template-project`.\n",
+    "The purpose of this notebook is to demonstrate the functionality of `flightmodels`.\n",
     "\n",
     "The demo is organised to show\n",
     "\n",
@@ -27,7 +27,7 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "from template_project import plotters, readers, tools, utilities, writers\n"
+    "from flightmodels import plotters, readers, tools, utilities, writers\n"
    ]
   },
   {
