--- a/demo-output.ipynb
+++ b/demo-output.ipynb
@@ -5,9 +5,9 @@
    "id": "c6a29764-f39c-431c-8e77-fbc6bfe20f01",
    "metadata": {},
    "source": [
-    "# template-project demo\n",
+    "# Demo\n",
     "\n",
-    "The purpose of this notebook is to demonstrate the functionality of `template-project`.\n",
+    "The purpose of this notebook is to demonstrate the functionality of `flightmodels`.\n",
     "\n",
     "The demo is organised to show\n",
     "\n",
@@ -24,17 +24,17 @@
    "id": "6a1920f3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-20T06:54:34.897309Z",
-     "iopub.status.busy": "2025-04-20T06:54:34.897131Z",
-     "iopub.status.idle": "2025-04-20T06:54:35.734959Z",
-     "shell.execute_reply": "2025-04-20T06:54:35.734543Z"
+     "iopub.execute_input": "2025-04-20T07:26:58.457475Z",
+     "iopub.status.busy": "2025-04-20T07:26:58.457321Z",
+     "iopub.status.idle": "2025-04-20T07:26:59.719190Z",
+     "shell.execute_reply": "2025-04-20T07:26:59.718674Z"
     }
    },
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "from template_project import plotters, readers, tools, utilities, writers\n"
+    "from flightmodels import plotters, readers, tools, utilities, writers\n"
    ]
   },
   {
@@ -43,10 +43,10 @@
    "id": "f6051cc7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-20T06:54:35.737074Z",
-     "iopub.status.busy": "2025-04-20T06:54:35.736701Z",
-     "iopub.status.idle": "2025-04-20T06:54:35.773655Z",
-     "shell.execute_reply": "2025-04-20T06:54:35.773175Z"
+     "iopub.execute_input": "2025-04-20T07:26:59.721357Z",
+     "iopub.status.busy": "2025-04-20T07:26:59.720891Z",
+     "iopub.status.idle": "2025-04-20T07:26:59.757896Z",
+     "shell.execute_reply": "2025-04-20T07:26:59.757428Z"
     }
    },
    "outputs": [
@@ -54,70 +54,70 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20250420T065435 INFO     setup_logger Logger initialized for array: rapid, writing to /home/runner/work/flightmodels/flightmodels/logs/RAPID_20250420T06_read.log\n"
+      "20250420T072659 INFO     setup_logger Logger initialized for array: rapid, writing to /home/runner/work/flightmodels/flightmodels/logs/RAPID_20250420T07_read.log\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20250420T065435 INFO     load_dataset Loading dataset for array: rapid\n"
+      "20250420T072659 INFO     load_dataset Loading dataset for array: rapid\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20250420T065435 INFO     read_rapid Starting to read RAPID dataset\n"
+      "20250420T072659 INFO     read_rapid Starting to read RAPID dataset\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20250420T065435 INFO     resolve_file_path Using cached file: /home/runner/work/flightmodels/flightmodels/data/moc_transports.nc\n"
+      "20250420T072659 INFO     resolve_file_path Using cached file: /home/runner/work/flightmodels/flightmodels/data/moc_transports.nc\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20250420T065435 INFO     read_rapid Opening RAPID dataset: /home/runner/work/flightmodels/flightmodels/data/moc_transports.nc\n"
+      "20250420T072659 INFO     read_rapid Opening RAPID dataset: /home/runner/work/flightmodels/flightmodels/data/moc_transports.nc\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20250420T065435 INFO     read_rapid Attaching metadata to RAPID dataset from file: moc_transports.nc\n"
+      "20250420T072659 INFO     read_rapid Attaching metadata to RAPID dataset from file: moc_transports.nc\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20250420T065435 INFO     read_rapid Renaming 'time' dimension/coordinate to 'TIME'\n"
+      "20250420T072659 INFO     read_rapid Renaming 'time' dimension/coordinate to 'TIME'\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20250420T065435 INFO     read_rapid Successfully loaded 1 RAPID dataset(s)\n"
+      "20250420T072659 INFO     read_rapid Successfully loaded 1 RAPID dataset(s)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20250420T065435 INFO     load_dataset Successfully loaded 1 dataset(s) for array: rapid\n"
+      "20250420T072659 INFO     load_dataset Successfully loaded 1 dataset(s) for array: rapid\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20250420T065435 INFO     _summarise_datasets \n",
+      "20250420T072659 INFO     _summarise_datasets \n",
       "Summary for array 'rapid':\n",
       "Total datasets loaded: 1\n",
       "\n",
@@ -175,10 +175,10 @@
    "id": "210d69fb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-20T06:54:35.775434Z",
-     "iopub.status.busy": "2025-04-20T06:54:35.775105Z",
-     "iopub.status.idle": "2025-04-20T06:54:36.794627Z",
-     "shell.execute_reply": "2025-04-20T06:54:36.794191Z"
+     "iopub.execute_input": "2025-04-20T07:26:59.759356Z",
+     "iopub.status.busy": "2025-04-20T07:26:59.759193Z",
+     "iopub.status.idle": "2025-04-20T07:27:00.782789Z",
+     "shell.execute_reply": "2025-04-20T07:27:00.782328Z"
     }
    },
    "outputs": [
@@ -214,10 +214,10 @@
    "id": "087bdd98",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-20T06:54:36.796374Z",
-     "iopub.status.busy": "2025-04-20T06:54:36.795947Z",
-     "iopub.status.idle": "2025-04-20T06:54:36.812638Z",
-     "shell.execute_reply": "2025-04-20T06:54:36.812158Z"
+     "iopub.execute_input": "2025-04-20T07:27:00.784480Z",
+     "iopub.status.busy": "2025-04-20T07:27:00.784217Z",
+     "iopub.status.idle": "2025-04-20T07:27:00.800691Z",
+     "shell.execute_reply": "2025-04-20T07:27:00.800311Z"
     }
    },
    "outputs": [
