Rename to gliderflightOG1

--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Demo\n",
     "\n",
-    "The purpose of this notebook is to demonstrate the functionality of `flightmodels`.\n",
+    "The purpose of this notebook is to demonstrate the functionality of `gliderflightOG1`.\n",
     "\n",
     "The demo is organised to show\n",
     "\n",
@@ -27,10 +27,10 @@
     "from pathlib import Path\n",
     "\n",
     "import xarray as xr\n",
-    "from flightmodels import plotters, readers, tools, utilities, writers\n",
+    "from gliderflightOG1 import plotters, readers, tools, utilities, writers\n",
     "import numpy as np\n",
     "import xarray as xr\n",
-    "from flightmodels import seaglider, plotters  # Assuming correct project style\n"
+    "from gliderflightOG1 import seaglider, plotters  # Assuming correct project style\n"
    ]
   },
   {
