--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -24,13 +24,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
     "\n",
     "import xarray as xr\n",
-    "from gliderflightOG1 import plotters, readers, tools, utilities, writers\n",
+    "from gliderflightOG1 import plotters, tools\n",
     "import numpy as np\n",
-    "import xarray as xr\n",
-    "from gliderflightOG1 import seaglider, plotters  # Assuming correct project style\n"
+    "from gliderflightOG1 import seaglider  # Assuming correct project style\n"
    ]
   },
   {
@@ -134,8 +132,7 @@
     ")\n",
     "\n",
     "def renormalize_params(params, factors, direction='normalize'):\n",
-    "    \"\"\"\n",
-    "    Renormalize parameters with given factors.\n",
+    "    \"\"\"Renormalize parameters with given factors.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
@@ -157,6 +154,7 @@
     "    ------\n",
     "    ValueError\n",
     "        If the direction is not 'normalize' or 'denormalize'.\n",
+    "\n",
     "    \"\"\"\n",
     "    if direction == 'normalize':\n",
     "        return params * factors\n",
