REFACTOR for OG1 varnames

--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -181,26 +181,85 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d29c335e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regressout_norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e2d99f12",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if 0:\n",
-    "    # And your glider dataset is called `glider`\n",
-    "    plotters.plot_model_comparisons(\n",
-    "        glider=glider,\n",
-    "        models={\n",
-    "            'steady': spd0,\n",
-    "            'unsteady_lag': spd['unstdy_lag'],\n",
-    "            'unsteady_ode': spd['unstdy_ode']\n",
-    "        },\n",
-    "        x_axis='TIME',\n",
-    "        select_timerange=(glider['TIME'].values[0], glider['TIME'].values[100]),\n",
-    "        variable='VERTICAL_SPEED',\n",
-    "        label_variable='Observed Vertical Speed',\n",
-    "        model_labels=['Flightvec0 (steady)', 'Flightvec_unstdy (lag)', 'Flightvec_unstdy (ODE)'],\n",
-    "        title='Comparison of Glider Flight Models'\n",
-    "    )"
+    "# 7. Apply optimized parameters and run flight model\n",
+    "# Update glider attributes with optimized parameters\n",
+    "glider.attrs.update({\n",
+    "#    'hd_a': regressout_norm[0],\n",
+    "#    'hd_b': regressout_norm[1], \n",
+    "    'vbdbias': regressout_norm[2],\n",
+    "    # Keep other parameters as they were\n",
+    "})\n",
+    "\n",
+    "# Run flight model with optimized parameters\n",
+    "try:\n",
+    "    # Calculate flight velocities using the optimized parameters\n",
+    "    glider_with_model = seaglider.flightvec_ds(\n",
+    "        glider, \n",
+    "        xl=1.0,  # typical glider length in meters\n",
+    "        hd_a=glider.attrs['hd_a'],\n",
+    "        hd_b=glider.attrs['hd_b'], \n",
+    "        hd_c=glider.attrs['hd_c']\n",
+    "    )\n",
+    "    \n",
+    "    print(\"Flight model calculation completed successfully!\")\n",
+    "    print(f\"Added variables: {list(set(glider_with_model.data_vars) - set(glider.data_vars))}\")\n",
+    "    \n",
+    "    # Simple plot showing model results\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    \n",
+    "    # Plot a subset of the data for visualization\n",
+    "    time_subset = slice(0, 500)  # First 500 data points\n",
+    "    \n",
+    "    fig, (ax1, ax2) = plt.subplots(2, 1, figsize=(12, 8))\n",
+    "    \n",
+    "    # Plot vertical velocities\n",
+    "    if 'VERTICAL_SPEED' in glider_with_model:\n",
+    "        ax1.plot(glider_with_model['TIME'][time_subset], \n",
+    "                glider_with_model['VERTICAL_SPEED'][time_subset], \n",
+    "                'b-', label='Observed', alpha=0.7)\n",
+    "    \n",
+    "    if 'umag' in glider_with_model:\n",
+    "        ax1.plot(glider_with_model['TIME'][time_subset], \n",
+    "                glider_with_model['umag'][time_subset], \n",
+    "                'r-', label='Model (umag)', alpha=0.7)\n",
+    "    \n",
+    "    ax1.set_ylabel('Velocity (m/s)')\n",
+    "    ax1.set_title('Glider Flight Model Results')\n",
+    "    ax1.legend()\n",
+    "    ax1.grid(True, alpha=0.3)\n",
+    "    \n",
+    "    # Plot glide angle if available\n",
+    "    if 'thdeg' in glider_with_model:\n",
+    "        ax2.plot(glider_with_model['TIME'][time_subset], \n",
+    "                glider_with_model['thdeg'][time_subset], \n",
+    "                'g-', label='Glide Angle (degrees)', alpha=0.7)\n",
+    "        ax2.set_ylabel('Angle (degrees)')\n",
+    "        ax2.legend()\n",
+    "        ax2.grid(True, alpha=0.3)\n",
+    "    \n",
+    "    ax2.set_xlabel('Time')\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(f\"Error running flight model: {e}\")\n",
+    "    print(\"This may be due to missing variables or incompatible data format.\")\n",
+    "    print(\"Check that all required variables are present in the dataset.\")"
    ]
   }
  ],
